Ajustes na centralização do Modal TipsCode

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="modal-content">
         <span id="closeModal" class="close"></span>
       <h2>Programador(a), preencha os campos abaixo para prosseguir para o FST.</h2>
-      <form>
+      <form class="form">
         <input type="text" placeholder="Nome" required>
         <input type="email" placeholder="E-mail" required>
         <input type="tel" placeholder="DDD + telefone" required>
